Trying to change algorithm